This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
===========================================================================
10/9/17: Added script command to take Record and tilt to specific angle after
exposure; made RecordAndTilt... command require that post-exposure actions be
enabled, and added command to report whether they are.

10/3/17: Added script commands so that entire tilt series run by script could
be aligned in IMOD just like ones run by the Tilt Series Controller.

10/3/17: Increased timeout for blanker/post-action thread to finish when
tilting.  If the thread times out and has to be killed, it is done in a way
that releases the access to the JOEL scope.

10/3/17: Imposed constraints on exposure time and intermediate frame
selections when aligning in Falcon 3 processor.

10/1/17: Fixed report on frame saving when aligning whole TS in IMOD and
saving is imposed rather than selected (In 3.6).

9/17/17: Provided for different scaling of counting and linear mode images
from Falcon 3 with the power of 2 for scaling selectable by property.  Added
preliminary linearization of counting mode dose rates.

9/17/17: Added image-specific counts per electron value to mdoc file.

9/17/17: Applied dose rate linearization for counting mode to output of
ElectronStats script command and added a command RawElectronStats for
unlinearized values.

9/16/17: Stopped function for getting dose rate from image mean from getting
relative gain factor from the wrong buffer (In 3.6).

9/12/17: Added ability to align frames from Falcon cameras in SerialEM and
write command files for aligning with IMOD, just as with K2.

9/12/17: Added script commands for suppressing the check on frame alignment
parameter suitability before taking image, for testing program version and for
skipping a command based on program version.
